# distMsgNotifier

./: README.md  api_test.py  app.py  data.db  data.pickle  database.py  mail_sender.py  pyproject.toml
templates/: index.html
