[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["ckdgns0130 <ckdgns0130@gmail.com>"]
description = ""
name = "distmsgnotifier"
version = "0.1.0"
[tool.poetry.dependencies]
apscheduler = "^3.6"
flask = "^1.1"
flask-sqlalchemy = "^2.4"
python = "^3.7"
[tool.poetry.dev-dependencies]
